<resources>
    <!-- APPLICATION SPECIFICS -->
    <string name="app_name">PupilPad</string>
    <string name="author">Sebastian Kamil Gluch</string>
    <string name="version_long">V0.0.0</string>
    <string name="build_date">21.02.2023</string>
    <!-- UNIVERSITY ONLY -->
    <string name="author_student_id">21414551</string>
    <string name="university_long">The University of Northampton</string>
    <string name="university_short">UON</string>
    <string name="module_code">CSY2061</string>
    <string name="module_long">Mobile Applications Development</string>
    <string name="assessment_code">AS1</string>
    <!-- APPS -->
    <string name="quiz">Quiz Aoo</string>
    <string name="notes">Notes App</string>
    <string name="certs">My Certificates</string>
    <string name="profile">User Profile</string>
    <string name="classMgmt">Class Management</string>
    <string name="appMgmt">App Administrator Tools</string>
    <string name="exit">Exit App</string>
    <!-- LOGIN -->
    <string name="login">Welcome to PupilPad!</string>
    <string name="username">Username</string>
    <string name="ent_username">Enter Username...</string>
    <string name="login_button">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="ent_password">Enter Password...</string>
    <string name="login_success">Login Successful!</string>
    <string name="login_failed">Login Failed.</string>
    <string name="invalid_details">Invalid username or password.</string>
    <string name="requirements">A password should contain:\n -\tAt least 8 characters\n -\tAt least one uppercase character\n -tAt least one lowercase character\n -tAt least one number</string>
    <!-- ROLE IDENTIFIERS -->
    <string name="role_admin_long">Administrator</string>
    <string name="role_admin_short">Admin</string>
    <string name="role_mod_long">Moderator</string>
    <string name="role_mod_short">Mod</string>
    <string name="role_basic_long">Pupil</string>
    <string name="role_basic_short">STU</string>
    <string name="role_none_long">Excluded</string>
    <string name="role_none_short">EXC</string>
    <!-- EDUCATION LEVELS / KEY STAGES -->
    <string name="ks_reception_long">Reception</string>
    <string name="ks_reception_short">KS0</string>
    <string name="ks_one_long">Key Stage 1</string>
    <string name="ks_one_short">KS1</string>
    <string name="ks_two_long">Key Stage 2</string>
    <string name="ks_two_short">KS2</string>
    <string name="ks_three_long">Key Stage 3</string>
    <string name="ks_three_short">KS3</string>
    <string name="ks_four_long">Key Stage 4 (GCSE)</string>
    <string name="ks_four_short">KS4</string>
    <string name="ks_five_long">Key Stage 5 (FE)</string>
    <string name="ks_five_short">KS5</string>
    <string name="ks_undergrad_long">Undergraduate (HE, UG)</string>
    <string name="ks_undergrad_short">UG</string>
    <string name="ks_postgrad_long">Postgraduate (HE, PG)</string>
    <string name="ks_postgrad_short">PG</string>
    <string name="ks_doctor_long">Doctorate (HE, DC)</string>
    <string name="ks_doctor_short">DC</string>
    <string name="ks_none_long">Guest</string>
    <string name="ks_none_short">N/A</string>
    <!-- SCHOOL YEARS -->
    <string name="yr_reception">Year 0 (Reception)</string>
    <string name="yr_year1">Year 1</string>
    <string name="yr_year2">Year 2</string>
    <string name="yr_year3">Year 3</string>
    <string name="yr_year4">Year 4</string>
    <string name="yr_year5">Year 5</string>
    <string name="yr_year6">Year 6</string>
    <string name="yr_year7">Year 7</string>
    <string name="yr_year8">Year 8</string>
    <string name="yr_year9">Year 9</string>
    <string name="yr_year10">Year 10</string>
    <string name="yr_year11">Year 11</string>
    <string name="yr_year12">Year 12</string>
    <string name="yr_year13">Year 13</string>
    <string name="yr_undergrad">Undergrad / Bachelor\'s</string>
    <string name="yr_postgrad">Postgrad / Master\'s</string>
    <string name="yr_phd">Doctoral / PHD</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <!-- ROLE ABILITIES -->
    <!-- UI Text -->
    <string name="user_profile_usage_information">Here you can edit your personal information, such as name, birthdate e.t.c.\nPlease bare in mind that School administrators review all personal information changes.</string>
    <string name="user_profile_save_info">Save Profile Information</string>
    <string name="user_profile_full_name_field">\nFull Name:</string>
    <string name="user_profile_birthdate_field">\n Birthdate:</string>
    <string name="user_profile_current_pw_field">\nCurrent Password:</string>
    <string name="user_profile_new_pw_field">\nNew Password:</string>
    <string name="user_profile_new_pw_confirm_field">\nConfirm New Password:</string>
    <string name="user_profile_new_pw_button">Set New Password</string>
    <string name="back">Back</string>
    <string name="back_menu">Back to menu</string>
    <string name="ok">Ok</string>
    <string name="contToMain">Continue</string>
    <string name="user_profile_invalid_full_name_title">Invalid Full Name!</string>
    <string name="user_profile_invalid_full_name_desc">There was an error while changing your full name. Please try again, or contact an administrator.</string>
    <string name="user_profile_invalid_birthdate_title">Invalid Birthdate!</string>
    <string name="user_profile_invalid_birthdate_desc">The birthdate you provided was invalid. Please use the \nDD-MM-YYYY\nformat.</string>
    <string name="user_profile_edit_success">Profile changes saved successfully.</string>
    <string name="user_profile_no_change">Full name or Birthdate either unchanged, or empty!</string>
    <string name="user_password_current_pw_incorrect_title">Current password does not match!</string>
    <string name="user_password_current_pw_incorrect_desc">The password you entered does not match the password on file.</string>
    <string name="user_password_new_not_valid_title">New password is not valid!</string>
    <string name="user_password_current_pw_invalid_title">Current password invalid!</string>
    <string name="user_password_current_pw_invalid_desc">Please enter your current password.</string>
    <string name="user_password_new_noconfirm_title">Could not confirm new password!</string>
    <string name="user_password_new_noconfirm_desc">New password not confirmed, check if both passwords are exactly the same.</string>
    <string name="user_password_new_nochange_title">Please choose a new password!</string>
    <string name="user_password_new_nochange_desc">Your new password must be different to your existing password.</string>
    <string name="user_password_success">Password changed successfully.</string>
    <string name="delete_file_title">Delete file?</string>
    <string name="delete_file_desc">This will permanently delete the file. \n\nAre you sure you want to do this?</string>
    <string name="delete_confirm">Delete Anyway</string>
    <string name="delete_cancel">Cancel</string>
    <string name="delete_file_complete">File successfully deleted.</string>
    <string name="delete_file_error">File could not be deleted. Please try again.</string>
    <string name="delete_file_cancel_complete">File not deleted.</string>
    <string name="delete_folder_title">Delete folder?</string>
    <string name="delete_folder_desc">This will permanently delete this folder and EVERYTHING inside of it!\n\nAre you sure you want to do this?</string>
    <string name="delete_folder_complete">Folder successfully deleted.</string>
    <string name="delete_folder_error">Folder could not be deleted. Please try again.</string>
    <string name="delete_folder_cancel_complete">Folder not deleted.</string>
    <string name="notes_app_new_file">Create new file</string>
    <string name="notes_app_new_folder">Create new folder</string>
    <string name="notes_app_back_dir">Back to previous folder</string>
    <string name="notes_app_new_folder_name">Folder name</string>
    <string name="notes_app_new_file_name">File Name</string>
    <string name="notes_app_new_file_dp_name">Display Name (Optional)</string>
    <string name="notes_app_new_file_title">Title (Optional)</string>
    <string name="notes_app_new_file_success">New file created!</string>
    <string name="notes_app_new_file_error">Could not make new file.</string>
    <string name="notes_app_new_file_cancel">File creation cancelled.</string>
    <string name="notes_app_new_folder_success">New folder created!</string>
    <string name="notes_app_new_folder_error">Could not make new folder.</string>
    <string name="notes_app_new_folder_cancel">Folder creation cancelled.</string>
    <string name="notes_app_cant_go_back">Can\'t go back: no previous folder!</string>
    <string name="notes_edit_save_file">Save file</string>
    <string name="notes_edit_exit">Exit Editor</string>
    <string name="notes_edit_exit_dialog_title">Are you sure you want to exit?</string>
    <string name="notes_edit_exit_dialog_desc">Any unsaved changes will be lost!</string>
    <string name="notes_edit_exit_dialog_save_exit">Save &amp; Exit</string>
    <string name="notes_edit_exit_dialog_exit_only">Exit Anyway</string>
    <string name="notes_edit_save_success">File saved successfully.</string>
    <string name="notes_edit_save_error">Could not save file! Please try again.</string>
    <string name="quiz_app_delete_progress">Wipe Quiz</string>
    <string name="quiz_app_question_next">Next Question</string>
    <string name="quiz_app_question_dialog_title">Quiz Complete!</string>
    <string name="quiz_app_question_dialog_save_exit">Save score &amp; Exit</string>
    <string name="quiz_app_question_dialog_exit_only">Exit without saving</string>
    <string name="quiz_app_question_exit">Exit Quiz</string>
    <string name="quiz_app_menu_wipe_all_title">Wipe all scores?</string>
    <string name="quiz_app_menu_wipe_all_desc">This will permanently delete ALL of your saved scores!\nThis cannot be undone.</string>
    <string name="quiz_app_menu_wipe_all_ok">Wipe anyway</string>
    <string name="quiz_app_menu_wipe_all_success">All of your scores have been wiped.</string>
    <string name="quiz_app_menu_wipe_all_error">Could not wipe your scores. Please try again later.</string>
    <string name="quiz_app_menu_wipe_all_cancel">Scores not wiped.</string>
    <string name="quiz_app_play_exit_dialog_desc">Any answered questions will be lost!</string>
    <string name="quiz_app_play_exit_score_no_save">Your score has not been saved.</string>
    <string name="quiz_app_play_exit_score_saved">Quiz Score saved!</string>
    <string name="quiz_app_play_exit_score_error">Could not save quiz score.</string>
    <string name="quiz_app_play_next_question">Next Question</string>
    <string name="quiz_app_play_correct">Correct answer!</string>
    <string name="quiz_app_play_incorrect">Incorrect answer.</string>
    <string name="quiz_app_play_no_choice">You need to select your answer before continuing to the next question!</string>
</resources>