<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/masterLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/userInfoContainer1"
            android:name="com.github.sebastiankg02.csy2061.as1.fragments.UserInfoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_user_info" />

        <TextView
            android:id="@+id/usageInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/user_profile_usage_information"
            android:textAlignment="center"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/fullNameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fullNameDesc"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user_profile_full_name_field"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/birthdateRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/birthdateDesc"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user_profile_birthdate_field"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthdateInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthdateInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:inputType="date"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/saveProfileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:text="@string/user_profile_save_info"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/currentPasswordRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentPasswordDesc"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user_profile_current_pw_field"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currentPWInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currentPWInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/newPasswordRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newPasswordDesc"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user_profile_new_pw_field"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPWInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPWInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmNewPWRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirmNewPWDesc"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user_profile_new_pw_confirm_field"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPWInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPWInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/saveNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:text="@string/user_profile_new_pw_button"
            android:textAlignment="center" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:text="@string/back"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>